Add back HelloController and <hello> directive to home page.

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,1 +1,10 @@
 <div>{{this.name}}</div>
+
+<div>
+  HelloDirective:
+  <hello></hello>
+</div>
+
+<div ng-controller="HelloController as hello">
+  HelloController as hello: {{hello.test}}
+</div>
