Gulp + JSHint, Embed images

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-<div>{{this.name}}</div>
+<div>{{home.name}}</div>
 
 <div>
   HelloDirective:
@@ -8,3 +8,9 @@
 <div ng-controller="HelloController as hello">
   HelloController as hello: {{hello.test}}
 </div>
+
+Base64-embedded image (&lt;32kb)
+<div class="trollface"></div>
+
+External image (&gt;32kb)
+<div class="true-story"></div>
