--- a/src/hello/hello.sass
+++ b/src/hello/hello.sass
@@ -1,8 +1,6 @@
 hello
-  display: block
-  width: 200px
-  height: 100px
-  line-height: 100px
+  display: inline-block
+  padding: 3px
   background: #f00
   color: #fff
   font-size: 20px
