Allow to use HAML templates / Add example of @some_var rendering

--- a/src/app/haml/haml.haml
+++ b/src/app/haml/haml.haml
@@ -1,6 +1,9 @@
 %h1
   Hello, {{hello}}!
 
+%h2
+  Here is some title: #{@title}
+
 %p<>
   %span<>
     I am a HAML template:
@@ -8,6 +11,9 @@
 %pre
   = "%h1"
   = "  Hello, {{hello}}!"
+
+  = "%h2"
+  = "  Here is some title: \#{@title}"
 
   = ".center<>"
   = "%span<>"
