--- a/src/app/haml/haml.sass
+++ b/src/app/haml/haml.sass
@@ -6,3 +6,10 @@ haml
 
   p
     padding: 1em 3em
+
+
+  pre
+    padding: 1em
+    border: 1px solid #ccc
+    background: #f1f2f3
+    border-radius: 0.5em
